test/testdata/string/times_string_non_int_error.lox
print "hello" * 2.5; // error: cannot multiply 'string' by non-integer 'number'
